--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body, h2, p {
     background-color: #555;
     background-image: url(images/pic02.jpg);
     background-size: cover;
-    text-align: center;
-    font-size: 25px;
+    text-align: centre;
+    
     
    
 
@@ -22,6 +22,7 @@ body, h2, p {
 
 body {
     font-family: Arial, sans-serif;
+    background-image: url(images/pic03.jpg);
 }
 
 header {
@@ -46,6 +47,7 @@ nav a {
 
 section {
     padding: 2em;
+    
 }
 
 footer {
@@ -78,12 +80,15 @@ footer {
 
 .portfolio-section p{
     
-    text-align: center;
+    text-align:center;
 }
 .portfolio-section h2{
     
     text-align: center;
     font-size: 40px;
     
+}.portfolio-section h2{
+    
+    text-align:center;
 }
 
