--- a/style.css
+++ b/style.css
@@ -1,28 +1,31 @@
 /* Reset some default styles */
-body, h2, p {
+body,p,h3{
     margin: 0;
     padding: 0;
     
     background-color: #555;
     background-image: url(images/pic02.jpg);
     background-size: cover;
-    text-align: centre;
+    
     
     
    
 
-}h1{
-    margin: 0;
-    padding: 0;
-
-    text-align: center;
-    font-size: 80px;
-
 }
+
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url(images/pic03.jpg);
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/Photo\ from\ paseka.jpg);
+    background-size: cover ;
+    background-position: left;
+    background-repeat: no-repeat;
+    
+
+    
+    
 }
 
 header {
@@ -30,6 +33,7 @@ header {
     color: #fff;
     text-align: center;
     padding: 1em;
+    
 }
 
 nav {
@@ -80,15 +84,28 @@ footer {
 
 .portfolio-section p{
     
-    text-align:center;
-}
-.portfolio-section h2{
-    
-    text-align: center;
-    font-size: 40px;
-    
-}.portfolio-section h2{
-    
-    text-align:center;
+    text-align:left;
 }
 
+    
+.portfolio-section h1{
+    font-size: 39px;
+    margin-top: 20px;
+    margin-left: 20px;
+    
+    text-align:left;
+}
+.portfolio-section{
+    margin-top: 20%;
+    font-size: 30px;
+}
+.portfolio-section h2{
+    font-size: 20px;
+    margin-top: 20px;
+    text-align: right;
+
+    
+
+    
+    
+}
