--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
 /* Reset some default styles */
+#menu{
+    display:none
+}
+.menu-list{
+    margin-bottom: 100px;;
+}
+.menu-list li a{
+    text-decoration: none;
+    color:#333;
+    font-size:16px;
+}
+.menu-list li a:hover{
+    color:#555
+}
 body,p,h3{
     margin: 0;
     padding: 0;
@@ -6,6 +20,7 @@ body,p,h3{
     background-color: #555;
     background-image: url(images/pic02.jpg);
     background-size: cover;
+    background-position: left top ;
     
     
     
@@ -39,7 +54,7 @@ header {
 nav {
     background-color: #555;
     padding: 0.5em;
-    text-align: right;
+    text-align: left;
 }
 
 nav a {
