--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .menu-list li a:hover{
     color:#555
 }
-body,p,h3{
+body,p{
     margin: 0;
     padding: 0;
     
@@ -103,13 +103,18 @@ footer {
 }
 
     
-.portfolio-section h1{
-    font-size: 39px;
-    margin-top: 20px;
-    margin-left: 20px;
+.portfolio-section h1,h3{
+    display: grid;
+    grid-column: 1/-1;
+    font-size: 20px;
+    margin-top: 0;
+    margin-left: 5px;
     
     text-align:left;
 }
+
+
+
 .portfolio-section{
     margin-top: 20%;
     font-size: 30px;
@@ -123,4 +128,11 @@ footer {
 
     
     
+}
+img{
+    display: grid;
+
+    margin: 10px;
+    max-width: 100px;
+    height: auto;
 }
