--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
     font-family: Arial, sans-serif;
     width: 100%;
     height: 100vh;
-    background-image: url(images/Photo\ from\ paseka.jpg);
+  
     background-size: cover ;
     background-position: left;
     background-repeat: no-repeat;
@@ -110,7 +110,7 @@ footer {
     margin-top: 0;
     margin-left: 5px;
     
-    text-align:left;
+   margin-right: auto;
 }
 
 
@@ -130,9 +130,9 @@ footer {
     
 }
 img{
-    display: grid;
+    max-width :100%;
+    height:auto;
+    display:block;
+    float:left;
 
-    margin: 10px;
-    max-width: 100px;
-    height: auto;
 }
