--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Reset some default styles */
+
 #menu{
     display:none
 }
@@ -29,19 +29,8 @@ body,p{
 }
 
 
-body {
-    font-family: Arial, sans-serif;
-    width: 100%;
-    height: 100vh;
-  
-    background-size: cover ;
-    background-position: left;
-    background-repeat: no-repeat;
-    
+ 
 
-    
-    
-}
 
 header {
     background-color:transparent;
@@ -79,7 +68,7 @@ footer {
     width: 100%;
 }
 
-/* Hide all sections by default */
+
 .portfolio-section {
     display: none;
 }
@@ -89,50 +78,21 @@ footer {
     display: block;
 }
 
-
-@media (max-width: 600px) {
-    nav a {
-        display: block;
-        margin: 0.5em 0;
-    }
+h1{
+    text-align: center;
 }
-
-.portfolio-section p{
-    
+p{
     text-align:left;
 }
 
-    
-.portfolio-section h1,h3{
-    display: grid;
-    grid-column: 1/-1;
-    font-size: 20px;
-    margin-top: 0;
-    margin-left: 5px;
-    
-   margin-right: auto;
-}
 
-
-
-.portfolio-section{
-    margin-top: 20%;
-    font-size: 30px;
-}
-.portfolio-section h2{
-    font-size: 30px;
-    margin-top: 20px;
-    text-align: right;
 
     
 
-    
-    
-}
-img{
-    max-width :100%;
-    height:auto;
-    display:block;
-    float:left;
 
-}
+
+
+
+
+
+
