--- a/style.css
+++ b/style.css
@@ -13,19 +13,14 @@
 .menu-list li a:hover{
     color:#555
 }
-body,p{
+body{
     margin: 0;
     padding: 0;
-    
-    background-color: black;
+background-color: #333;
+
    
     background-size: cover;
-    background-position: left top ;
-    
-    
-    
-   
-
+ 
 }
 .img{
     display:flex;
@@ -33,11 +28,6 @@ body,p{
  
     
 }
-
-
-
- 
-
 
 header {
     background-color:transparent;
@@ -91,6 +81,50 @@ h1{
 p{
     text-align:left;
 }
+#links{
+    background-color:black;
+    width: 80%;
+    margin-left:auto;
+    margin-right:auto
+}
+#skills{
+    background-color:black;
+    width: 80%;
+    margin-left:auto;
+    margin-right:auto
+}
+#contact{
+    background-color:black;
+    width: 80%;
+    margin-left:auto;
+    margin-right:auto
+}
+#about{
+    background-color:black;
+    width: 80%;
+    margin-left:auto;
+    margin-right:auto
+}
+#education{
+    background-color:black;
+    width: 80%;
+    margin-left:auto;
+    margin-right:auto
+}
+
+
+#home{
+    background-color:black;
+    width: 80%;
+    margin-left:auto;
+    margin-right:auto
+    
+}
+p,h3{
+    color:white;
+    font-size:50px
+}
+
 
 
 
