--- a/style.css
+++ b/style.css
@@ -90,7 +90,20 @@ p,h3{
     color:white;
     font-size:20px
 }
+body {
+    margin: 0;
+    padding: 0;
+}
+.portfolio-sections {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
 
+}
+.portfolio-section {
+    background-color: #eee;
+    padding: 20px;
+}
 
 
 
