--- a/style.css
+++ b/style.css
@@ -94,15 +94,26 @@ body {
     margin: 0;
     padding: 0;
 }
-.portfolio-sections {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-
-}
 
 
+@media (min-width: 300px){
+    .portfolio-sections {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+    
+    }
+  }
 
+  @media (min-width: 500px){
+    .portfolio-sections {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+    
+    }
+  }
+  
 
 
 
