--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ background-color: #333;
  
 }
 .img{
-    display:flex;
-    justify-content: flex-start;
+    width:55%;
+    height: auto;
  
     
 }
@@ -47,45 +47,8 @@ h1{
 p{
     text-align:left;
 }
-#links{
-    background-color:black;
-    width: 80%;
-    margin-left:auto;
-    margin-right:auto
-}
-#skills{
-    background-color:black;
-    width: 80%;
-    margin-left:auto;
-    margin-right:auto
-}
-#contact{
-    background-color:black;
-    width: 80%;
-    margin-left:auto;
-    margin-right:auto
-}
-#about{
-    background-color:black;
-    width: 80%;
-    margin-left:auto;
-    margin-right:auto
-}
-#education{
-    background-color:black;
-    width: 80%;
-    margin-left:auto;
-    margin-right:auto
-}
 
 
-#home{
-    background-color:black;
-    width: 80%;
-    margin-left:auto;
-    margin-right:auto
-    
-}
 p,h3{
     color:white;
     font-size:20px
@@ -103,7 +66,14 @@ body {
         grid-gap: 20px;
     
     }
+    .portfolio-section{
+        background-color:black;
+        width: 70%;
+        margin-left:auto;
+        margin-right:auto
+    }
   }
+  
 
   @media (min-width: 500px){
     .portfolio-sections {
@@ -111,6 +81,12 @@ body {
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 20px;
     
+    }
+    .portfolio-section{
+        background-color:black;
+        width: 80%;
+        margin-left:auto;
+        margin-right:auto
     }
   }
   
