--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ background-color: #333;
  
 }
 .img{
-    width:55%;
+    width:40%;
     height: auto;
  
     
@@ -88,6 +88,10 @@ body {
         margin-left:auto;
         margin-right:auto
     }
+  }
+
+.order-list li {
+   color:white
   }
   
 
