--- a/style.css
+++ b/style.css
@@ -60,10 +60,14 @@ body {
 
 
 @media (min-width: 300px){
+    nav{
+        display: block;
+    }
     .portfolio-sections {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 20px;
+        margin-top: 60px; 
     
     }
     .portfolio-section{
@@ -72,14 +76,46 @@ body {
         margin-left:auto;
         margin-right:auto
     }
+    nav {
+        display: block;
+        background-color: purple;
+        color: #fff;
+        text-align: right;
+        padding: 1em;
+       
+     width: 100%;
+      }
+      nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+      }
+      nav li {
+        margin-right: 20px;
+      }
+      nav a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 14px;
+        padding: 10px 15px;
+      }
+      nav a:hover {
+        color: #ccc;
+      }
   }
   
 
   @media (min-width: 500px){
+    nav{
+        display: none;
+    }
     .portfolio-sections {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 20px;
+        margin-top: 60px; 
     
     }
     .portfolio-section{
@@ -94,15 +130,4 @@ body {
    color:white
   }
   
-
-
-
-    
-
-
-
-
-
-
-
 
