--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@ body{
     margin: 0;
     padding: 0;
 background-color: #333;
-
-   
+background-image: url(imag);
     background-size: cover;
  
 }
@@ -113,14 +112,14 @@ body {
     }
     .portfolio-sections {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         grid-gap: 20px;
         margin-top: 60px; 
     
     }
     .portfolio-section{
         background-color:black;
-        width: 80%;
+        width: 60%;
         margin-left:auto;
         margin-right:auto
     }
