--- a/style.css
+++ b/style.css
@@ -1,132 +1,245 @@
-
-
-
-body{
-    margin: 0;
-    padding: 0;
-background-color: #333;
-background-image: url(imag);
-    background-size: cover;
- 
-}
-.img{
-    width:40%;
-    height: auto;
- 
-    
+* {
+  margin: 0;
+  padding: 0;
 }
 
-header {
-    background-color:transparent;
-    color: #fff;
-    text-align: center;
-    padding: 1em;
-    font-size: 20px;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 
+p {
+  color: white;
+}
 
+a,
+.btn {
+  transition: all 300ms ease;
+}
 
+nav,
+.nav-links {
+  display: flex;
+}
+
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh;
+}
+
+.nav-links {
+  gap: 2rem;
+  list-style: none;
+  font-size: 1.5rem;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  text-decoration-color: white;
+}
+
+a:hover {
+  color: purple;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181);
+}
+
+#hamburger-nav {
+  display: none;
+}
+
+.hamburger-menu {
+  position: relative;
+  display: inline-block;
+}
+
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.hamburger-icon span {
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+  list-style: none;
+}
+
+.menu-links.open {
+  max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child {
+  transform: rotate(45deg) translate(10px, 5px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-icon.open span:last-child {
+  transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+.hamburger-icon span:first-child {
+  opacity: 1;
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
 
 section {
-    padding: 2em;
-    
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
 }
 
-
-
-
-
-
-
-
-h1{
-    text-align: center;
-}
-p{
-    text-align:left;
+.section-container {
+  display: flex;
 }
 
-
-p,h3{
-    color:white;
-    font-size:20px
-}
-body {
-    margin: 0;
-    padding: 0;
+.section__text {
+  align-self: center;
+  text-align: center;
 }
 
+.section__text p {
+  font-weight: 500;
+}
 
-@media (min-width: 300px){
-    nav{
-        display: block;
-    }
-    .portfolio-sections {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 20px;
-        margin-top: 60px; 
-    
-    }
-    .portfolio-section{
-        background-color:black;
-        width: 70%;
-        margin-left:auto;
-        margin-right:auto
-    }
-    nav {
-        display: block;
-        background-color: purple;
-        color: #fff;
-        text-align: right;
-        padding: 1em;
-       
-     width:fit-content
-      }
-      nav ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: space-between;
-      }
-      nav li {
-        margin-right: 20px;
-      }
-      nav a {
-        color: #fff;
-        text-decoration: none;
-        font-size: 14px;
-        padding: 10px 15px;
-      }
-      nav a:hover {
-        color: #ccc;
-      }
-  }
-  
+.section__text__p1 {
+  text-align: center;
+  color: white;
+}
 
-  @media (min-width: 500px){
-    nav{
-        display: none;
-    }
-    .portfolio-sections {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 20px;
-        margin-top: 60px; 
-    
-    }
-    .portfolio-section{
-        background-color:black;
-        width: 60%;
-        margin-left:auto;
-        margin-right:auto
-    }
-  }
+.section__text__p2 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
 
-.order-list li {
-   color:white
-  }
-  
+.title {
+  font-size: 3rem;
+  text-align: center;
+  color: black;
+}
 
+#about {
+  position: relative;
+}
+
+.arrow {
+  position: absolute;
+  right: -5rem;
+  bottom: 2.5rem;
+}
+
+.section-container {
+  gap: 4rem;
+  height: 80%;
+}
+
+#projects {
+  position: relative;
+}
+
+.color-container {
+  border-color: rgb(163, 163, 163);
+  background: rgb(250, 250, 250);
+}
+
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+footer p {
+  text-align: center;
+}
+
+.portfolio-section {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: (250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+
+#about {
+  background-color: purple;
+}
+#contact {
+  background-color: purple;
+}
+#education {
+  background-color: purple;
+}
+#home,
+#skills,
+#links,
+#portfolio {
+  background-color: purple;
+  color: white;
+}
+
+.portfolio-section {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.text-container {
+  flex-basis: 50%;
+  margin: 20px;
+}
+h1 {
+  text-align: center;
+  color: orange;
+  font-size: 40px;
+  margin-top: 40px;
+}
