--- a/style.css
+++ b/style.css
@@ -163,6 +163,9 @@ section {
   font-size: 3rem;
   text-align: center;
   color: black;
+  margin-top: 0;
+  padding-top: 0;
+ 
 }
 
 #about {
@@ -221,11 +224,21 @@ footer p {
   background-color: purple;
 }
 #home,
-#skills,
+
 #links,
 #portfolio {
   background-color: purple;
   color: white;
+
+}
+
+
+#skills {
+  background-image: url(/images.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+ 
 }
 
 .portfolio-section {
@@ -243,3 +256,22 @@ h1 {
   font-size: 40px;
   margin-top: 40px;
 }
+
+#skills_list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; 
+}
+
+#skills_list ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px; 
+ 
+}
+
