--- a/style.css
+++ b/style.css
@@ -165,7 +165,6 @@ section {
   color: black;
   margin-top: 0;
   padding-top: 0;
- 
 }
 
 #about {
@@ -192,13 +191,6 @@ section {
   background: rgb(250, 250, 250);
 }
 
-#contact {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  height: 70vh;
-}
-
 footer p {
   text-align: center;
 }
@@ -206,6 +198,8 @@ footer p {
 .portfolio-section {
   display: flex;
   justify-content: center;
+  justify-content: center;
+  align-items: center;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
@@ -224,21 +218,23 @@ footer p {
   background-color: purple;
 }
 #home,
-
 #links,
 #portfolio {
   background-color: purple;
   color: white;
-
 }
-
 
 #skills {
   background-image: url(/images.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
- 
+}
+#contact {
+  background-image: url(images/banner.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .portfolio-section {
@@ -261,7 +257,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%; 
+  height: 100%;
 }
 
 #skills_list ul {
@@ -271,7 +267,48 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px; 
- 
+  gap: 10px;
 }
 
+.education_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 5px;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.image-container {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 10px;
+  transition: transform 0.3s ease;
+}
+
+.image-container:hover {
+  transform: scale(1.1);
+}
