--- a/style.css
+++ b/style.css
@@ -312,3 +312,25 @@ h1 {
 .image-container:hover {
   transform: scale(1.1);
 }
+.about_p {
+  display: flex;
+  justify-content: center;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: (250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+.about-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2rem;
+  border: 0.1rem solid rgb(163, 163, 163);
+  background: rgb(250, 250, 250);
+  margin: 4rem auto 2rem;
+  padding: 0.5rem;
+}
