--- a/style.css
+++ b/style.css
@@ -253,12 +253,7 @@ h1 {
   margin-top: 40px;
 }
 
-#skills_list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
+
 
 #skills_list ul {
   list-style: none;
@@ -268,6 +263,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  text-align: center;
 }
 
 .education_list {
@@ -324,13 +320,30 @@ h1 {
   margin: 2rem auto;
   padding: 0.5rem;
 }
-.about-container {
+.about-container{
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 2rem;
   border: 0.1rem solid rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+ 
   margin: 4rem auto 2rem;
   padding: 0.5rem;
 }
+
+.heading{
+margin-top: -25rem;;
+margin-left: 35rem;;
+}
+#skills_list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2rem;
+  border: 0.1rem solid rgb(163, 163, 163);
+ 
+  margin: 4rem auto 2rem;
+  padding: 0.5rem;
+  margin-left: -4rem;;
+}
+
