--- a/style.css
+++ b/style.css
@@ -28,7 +28,14 @@ nav,
 nav {
   justify-content: space-around;
   align-items: center;
-  height: 17vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+ 
+  height: 28vh;
+ 
+
 }
 
 .nav-links {
@@ -38,13 +45,13 @@ nav {
 }
 
 a {
-  color: black;
+  color: white;
   text-decoration: none;
   text-decoration-color: white;
 }
 
 a:hover {
-  color: purple;
+  color: orange;
   text-decoration: underline;
   text-underline-offset: 1rem;
   text-decoration-color: rgb(181, 181, 181);
