--- a/style.css
+++ b/style.css
@@ -28,14 +28,7 @@ nav,
 nav {
   justify-content: space-around;
   align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
- 
-  height: 28vh;
- 
-
+  height: 17vh;
 }
 
 .nav-links {
@@ -45,13 +38,13 @@ nav {
 }
 
 a {
-  color: white;
+  color: black;
   text-decoration: none;
   text-decoration-color: white;
 }
 
 a:hover {
-  color: orange;
+  color: purple;
   text-decoration: underline;
   text-underline-offset: 1rem;
   text-decoration-color: rgb(181, 181, 181);
