--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a {
 }
 
 a:hover {
-  color: purple;
+  color: orange;
   text-decoration: underline;
   text-underline-offset: 1rem;
   text-decoration-color: rgb(181, 181, 181);
@@ -351,4 +351,6 @@ margin-left: 35rem;;
   padding: 0.5rem;
   margin-left: -4rem;;
 }
-
+.white{
+  color:white
+}
