--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: purple;
 }
 
 html {
@@ -197,15 +198,26 @@ footer p {
 
 .portfolio-section {
   display: flex;
-  justify-content: center;
+  flex-direction: column; 
   justify-content: center;
   align-items: center;
   border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  background: (250, 250, 250);
+  border: 0.1rem solid rgb(163, 163, 163);
+  background-color: rgb(250, 250, 250);
   margin: 2rem auto;
-  padding: 0.5rem;
+  padding: 1rem; 
+  width: 80%; 
+  max-width: 800px; 
+}
+
+
+.portfolio-section > * {
+  flex: 1; 
+}
+
+
+.portfolio-section p {
+  margin-bottom: 0.5rem; 
 }
 
 #about {
@@ -354,3 +366,36 @@ margin-left: 35rem;;
 .white{
   color:white
 }
+
+
+
+@media (max-width: 768px) {
+  .portfolio-section {
+    padding: 0.5rem; 
+  }
+}
+
+@media (max-width: 576px) {
+  .portfolio-section {
+    width: 90%; 
+    padding: 0.3rem; 
+  }
+}
+@media (max-width: 800px) and (max-height: 1200px) {
+  .portfolio-section {
+    width: 90%; 
+    padding: 0.5rem; 
+  }
+}
+@media (max-width: 375px) and (max-height: 667px) {
+  .portfolio-section {
+    width: 100%; 
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+}
+
