--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ footer p {
   justify-content: center;
   align-items: center;
   border-radius: 2rem;
-  border: 0.1rem solid rgb(163, 163, 163);
+  /*border: 0.1rem solid rgb(163, 163, 163);*/
   background-color: rgb(250, 250, 250);
   margin: 2rem auto;
   padding: 1rem; 
