--- a/style.css
+++ b/style.css
@@ -366,6 +366,10 @@ margin-left: 35rem;;
 .white{
   color:white
 }
+#mobile-menu-toggle{
+  display: none;
+}
+
 
 
 
@@ -376,6 +380,12 @@ margin-left: 35rem;;
 }
 
 @media (max-width: 576px) {
+#mobile-menu-toggle {
+  display: inline;
+}
+#desktop-nav{
+  display: none;
+}
   .portfolio-section {
     width: 90%; 
     padding: 0.3rem; 
@@ -398,4 +408,44 @@ margin-left: 35rem;;
     flex: initial; 
   }
 }
+#mobile-menu-toggle {
+ 
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 1000;
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
 
+#mobile-nav {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 999;
+}
+
+#mobile-nav .nav-links {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+#mobile-nav .nav-links li {
+  margin-bottom: 20px;
+}
+
+#mobile-nav .nav-links li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
