--- a/style.css
+++ b/style.css
@@ -25,23 +25,27 @@ nav,
 .nav-links {
   display: flex;
 margin-top: 0;
+
 }
 
 nav {
  position: fixed;
  margin-top: -2rem;
+ color:white
 }
 
 .nav-links {
   gap: 2rem;
   list-style: none;
-  font-size: 1rem;
+  font-size: 1.3rem;
+  color:white
 }
 
 a {
   color: black;
   text-decoration: none;
   text-decoration-color: white;
+  color:white
 }
 
 a:hover {
