--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ section {
 .title {
   font-size: 3rem;
   text-align: center;
-  color: black;
+  color: orange;
   margin-top: 0;
   padding-top: 0;
 }
