--- a/style.css
+++ b/style.css
@@ -214,8 +214,8 @@ footer p {
   background-color: rgb(250, 250, 250);
   margin: 2rem auto;
   padding: 1rem; 
-  width: 80%; 
-  max-width: 800px; 
+  width: 60%; 
+  max-width: 600px; 
 }
 
 
@@ -395,19 +395,61 @@ margin-left: 35rem;;
   display: none;
 }
   .portfolio-section {
-    width: 90%; 
+
     padding: 0.3rem; 
   }
 }
-@media (max-width: 800px) and (max-height: 1200px) {
+@media (max-width: 800px) and (max-height: 1280px) {
+  #mobile-menu-toggle {
+    display: inline;
+  }
+  #desktop-nav{
+    display: none;
+  }
   .portfolio-section {
-    width: 90%; 
+
+    padding: 0.5rem; 
+  }
+}
+@media (max-width: 915px) and (max-height: 412px) {
+  #mobile-menu-toggle {
+    display: inline;
+  }
+  #desktop-nav{
+    display: none;
+  }
+  .portfolio-section {
+
+    padding: 0.5rem; 
+  }
+}
+@media (max-width: 1080px) and (max-height: 810px) {
+  #mobile-menu-toggle {
+    display: inline;
+  }
+  #desktop-nav{
+    display: none;
+  }
+  .portfolio-section {
+
+    padding: 0.5rem; 
+  }
+}
+@media (max-width: 810px) and (max-height: 1080px) {
+  #mobile-menu-toggle {
+    display: inline;
+  }
+  #desktop-nav{
+    display: none;
+  }
+  .portfolio-section {
+
     padding: 0.5rem; 
   }
 }
 @media (max-width: 375px) and (max-height: 667px) {
   .portfolio-section {
-    width: 100%; 
+  
     padding: 0.5rem; 
     margin: 1rem auto; 
   }
