--- a/style.css
+++ b/style.css
@@ -332,6 +332,7 @@ footer p {
   background: (250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
+
 }
 .about-container{
   display: flex;
@@ -410,6 +411,13 @@ margin-left: 35rem;;
 
     padding: 0.5rem; 
   }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
 }
 @media (max-width: 915px) and (max-height: 412px) {
   #mobile-menu-toggle {
@@ -457,7 +465,117 @@ margin-left: 35rem;;
   .portfolio-section > * {
     flex: initial; 
   }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
 }
+@media (max-width: 667px) and (max-height: 375px) {
+  .portfolio-section {
+  
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+}
+
+
+@media (max-width: 926px) and (max-height: 428px) {
+  .portfolio-section {
+  
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+}
+
+@media (max-width: 810px) and (max-height: 1080px) {
+  .portfolio-section {
+  
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+}
+@media (max-width: 1080px) and (max-height: 810px) {
+  .portfolio-section {
+  
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+}
+
+
+
+
+@media (max-width: 854px) and (max-height: 384px) {
+  .portfolio-section {
+  
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+}
+
+
+
+
+
+
 #mobile-menu-toggle {
  
   position: fixed;
@@ -482,20 +600,88 @@ margin-left: 35rem;;
   z-index: 999;
 }
 
-#mobile-nav .nav-links {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
 
-#mobile-nav .nav-links li {
+
+#mobile-nav .nav-linkss li {
+  margin-top: 0;
   margin-bottom: 20px;
 }
 
-#mobile-nav .nav-links li a {
+#mobile-nav .nav-linkssli a {
   color: #fff;
   text-decoration: none;
   font-size: 1.5rem;
+}
+@media (max-width: 915px) and (max-height: 412px) {
+  .portfolio-section {
+  
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+}
+@media (max-width: 820px) and (max-height: 1000px) {
+  .portfolio-section {
+  
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+}
+
+@media (max-width: 816px) and (max-height: 915px) {
+  .portfolio-section {
+  
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+}
+@media (max-width: 1280px) and (max-height: 814px) {
+  .portfolio-section {
+  
+    padding: 0.5rem; 
+    margin: 1rem auto; 
+  }
+
+  .portfolio-section > * {
+    flex: initial; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
 }
