--- a/style.css
+++ b/style.css
@@ -685,3 +685,24 @@ margin-left: 35rem;;
    
   }
 }
+
+
+@media (min-width: 800px) {
+  #mobile-menu-toggle {
+    display: inline;
+  }
+  #desktop-nav{
+    display: none;
+  }
+  .portfolio-section {
+
+    padding: 0.5rem; 
+  }
+  #mobile-nav .nav-linkss {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+}
