--- a/style.css
+++ b/style.css
@@ -300,6 +300,24 @@ footer p {
  
 
 }
+.image-containers {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 40%;
+  margin: 5px;
+  
+}
+
+.image-containers img {
+  width: 100%;
+  height: 100%;
+ 
+
+}
 
 .image-container img {
   width: 100%;
@@ -308,7 +326,7 @@ footer p {
   transition: transform 0.3s ease;
 }
 
-.image-container {
+.image-containers {
   width: 200px;
   height: 200px;
   overflow: hidden;
