--- a/style.css
+++ b/style.css
@@ -737,3 +737,32 @@ margin-left: 35rem;;
    
   }
 }
+#container {
+  display: flex;
+  gap: 10px; 
+}
+
+
+#projects{
+  background-color: purple;
+}
+.projects-container {
+  display: flex; 
+  justify-content: space-around; 
+  align-items: center; 
+}
+
+.image-container {
+  margin: 0 10px; 
+  text-align: center; 
+}
+
+.live-link {
+  color: orange; 
+  text-decoration: underline; 
+}
+
+.live-link:hover {
+  text-decoration: none; 
+  font-weight: bold; 
+}
